Update swagger doc (#3)
